test/spec_vectors/simd_f64x2_cmp/fail/module_17.wat
(module (func $f64x2.lt-1st-arg-empty (result v128) (f64x2.lt (v128.const f64x2 0 0))))